--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
-anki==2.1.32
-ankirspy==2.1.32
+anki==2.1.36
+ankirspy==2.1.36
 beautifulsoup4==4.9.1
 certifi==2020.6.20
 chardet==3.0.4
@@ -8,7 +8,8 @@ distro==1.5.0
 idna==2.10
 importlib-metadata==1.7.0; python_version < "3.8"
 markdown==3.2.2
-orjson==3.3.1; platform_machine == "x86_64"
+# orjson==3.3.1; platform_machine == "x86_64"
+# maturin neend update to upstream
 protobuf==3.13.0
 psutil==5.7.2
 pyaudio==0.2.11
