--- a/src/ankisyncd.conf
+++ b/src/ankisyncd.conf
@@ -1,6 +1,7 @@
 [sync_app]
 # change to 127.0.0.1 if you don't want the server to be accessible from the internet
-host = 127.0.0.1
+#host = 127.0.0.1
+host = 0.0.0.0
 port = 27702
 data_root = ./collections
 base_url = /sync/
