--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,16 +1,23 @@
-Warning: The lock file is not up to date with the latest changes in pyproject.toml. You may be getting outdated dependencies. Run update to update them.
-anki==2.1.36; python_version >= "3.7"
-ankirspy==2.1.36; python_version >= "3.7"
+#anki==2.1.36; python_version >= "3.7"
+#ankirspy==2.1.36; python_version >= "3.7"
+# need bazel local 
+setuptools
 beautifulsoup4==4.9.1
 certifi==2020.6.20; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 chardet==3.0.4; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 decorator==4.4.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.2.0")
 distro==1.5.0
 idna==2.10; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-importlib-metadata==1.7.0; python_version >= "3.5" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.5"
+
+#importlib-metadata==1.7.0; python_version >= "3.5" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.5"
+importlib-metadata
 markdown==3.2.2; python_version >= "3.5"
-orjson==3.3.1; platform_machine == "x86_64" and python_version >= "3.7"
+#orjson==3.3.1; platform_machine == "x86_64" and python_version >= "3.7"
+#orjson
+/workspaces/orjson/orjson-3.4.3-cp39-cp39d-linux_x86_64.whl
 protobuf==3.13.0; python_version >= "3.7"
+# use bazel ways 
+
 psutil==5.7.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 pyaudio==0.2.11
 requests==2.24.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -19,4 +26,5 @@ six==1.15.0; python_version >= "3.7" and python_full_version < "3.0.0" or python
 soupsieve==1.9.6; python_version >= "3.7"
 urllib3==1.25.10; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
 webob==1.8.6; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-zipp==3.1.0; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.5" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.5")
+#zipp==3.1.0; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.5" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.5")
+zipp
