--- a/.bazelrc
+++ b/.bazelrc
@@ -5,7 +5,11 @@ common --experimental_repository_cache_hardlinks
 # specify python path on Windows for pyo3 compile
 build:windows --action_env="PYTHON_SYS_EXECUTABLE=c:\\python\\python.exe"
 #build:linux   --action_env="PYTHON_SYS_EXECUTABLE=/usr/local/python/bin/python3" --action_env="PYTHONTRACEMALLOC=1" --action_env="PYTHONMALLOCSTATS=1"
-build:linux   --action_env="PYTHON_SYS_EXECUTABLE=/usr/local/python/bin/python3" --action_env="PYTHONTRACEMALLOC=25" --action_env="PYTHONMALLOCSTATS=1"
+#build:linux   --action_env="PYTHON_SYS_EXECUTABLE=/usr/local/python/bin/python3"  --action_env="PYTHONTRACEMALLOC=25" --action_env="PYTHONMALLOCSTATS=1"
+#build:linux   --action_env="PYO3_PYTHON=python3.9"  --action_env="PYTHONTRACEMALLOC=25" --action_env="PYTHONMALLOCSTATS=1"
+#build:linux  --action_env="PYTHON_SYS_EXECUTABLE=/usr/local/python/bin/python3"  --action_env="PYO3_PYTHON=python3.9"  --action_env="PYTHONTRACEMALLOC=25" --action_env="PYTHONMALLOCSTATS=1"
+build:linux  --action_env="PYO3_PYTHON=/usr/local/python/bin/python3"  --action_env="PYTHONTRACEMALLOC=25" --action_env="PYTHONMALLOCSTATS=1"
+#build:linux  --action_env="PYO3_PYTHON=python3.9"  --action_env="PYTHONTRACEMALLOC=25" --action_env="PYTHONMALLOCSTATS=1"
 
 # runfiles are off by default on Windows, and we need them
 build --enable_runfiles
