--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,7 +14,11 @@ importlib-metadata
 markdown==3.2.2; python_version >= "3.5"
 #orjson==3.3.1; platform_machine == "x86_64" and python_version >= "3.7"
 #orjson
-/workspaces/orjson/orjson-3.4.3-cp39-cp39d-linux_x86_64.whl
+#orjson==3.4.3             # via -r requirements.in
+#/workspaces/orjson/orjson-3.4.3-cp39-cp39d-linux_x86_64.whl
+/workspaces/orjson/target/wheels/orjson-3.4.3-cp39-cp39d-linux_x86_64.whl
+#/workspaces/orjson/target/wheels/orjson-3.4.3-cp39-cp39d-manylinux2014_x86_64.whl
+# now use the pylib's 
 protobuf==3.13.0; python_version >= "3.7"
 # use bazel ways 
 
