--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -19,8 +19,10 @@ load("@my_deps//:requirements.bzl", "requirement", "all_requirements")
 
 py_binary(
     name = "syncd",
+    #python_version = "PY3",
     srcs = glob(["src/ankisyncd/*.py"]),
     #srcs = glob(["**/*.py"], allow_empty = True),
+    #srcs = glob(["**/*.py"]),
 
     #srcs = glob(["//src:**/*.py"]),
     # srcs = glob(["//src:ankisyncd/**/*.py"]),
@@ -32,6 +34,10 @@ py_binary(
         # runtime binary deps 		    
 	#"//src:ankisyncd.conf",
 	#"//src:ankisyncd.conf",
+	"src/collections",
+	"src/auth.db",
+	"src/addon",
+	"src/session.db",
 	"src/ankisyncd.conf",
 
     ],
