ankisyncdconfig in bazel

--- a/src/ankisyncd.conf
+++ b/src/ankisyncd.conf
@@ -2,13 +2,14 @@
 # change to 127.0.0.1 if you don't want the server to be accessible from the internet
 host = 127.0.0.1
 #host = 0.0.0.0
+#port = 27704
 port = 27702
-data_root = ./collections
+data_root = src/collections
 base_url = /sync/
 base_media_url = /msync/
-auth_db_path = ./auth.db
+auth_db_path = src/auth.db
 # optional, for session persistence between restarts
-session_db_path = ./session.db
+session_db_path = src/session.db
 
 # optional, for overriding the default managers and wrappers
 # # must inherit from ankisyncd.full_sync.FullSyncManager, e.g,
